@@ -150,6 +150,21 @@ BEGIN
     0
 END
 
+
+/////////////////////////////////////////////////////////////////////////////
+//
+// Menu
+//
+
+IDR_ASSEMBLY_MENU MENU
+BEGIN
+    POPUP "CLR"
+    BEGIN
+        MENUITEM "Open &file location",         ID_CLR_OPENFILELOCATION
+        MENUITEM "&Copy",                       ID_CLR_COPY
+    END
+END
+
 #endif    // English (Australia) resources
 /////////////////////////////////////////////////////////////////////////////
 
