@@ -5,18 +5,21 @@
 #define IDD_PROCDOTNETPERF              101
 #define ID_COPY                         101
 #define IDD_PROCDOTNETASM               102
+#define IDR_ASSEMBLY_MENU               104
 #define IDC_APPDOMAINS                  1001
 #define IDC_CATEGORIES                  1002
 #define IDC_COUNTERS                    1003
 #define IDC_LIST                        1005
 #define IDC_DOTNET_PERF_SHOWBYTES       1006
+#define ID_CLR_OPENFILELOCATION         40001
+#define ID_CLR_COPY                     40002
 
 // Next default values for new objects
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
-#define _APS_NEXT_RESOURCE_VALUE        104
-#define _APS_NEXT_COMMAND_VALUE         40001
+#define _APS_NEXT_RESOURCE_VALUE        105
+#define _APS_NEXT_COMMAND_VALUE         40003
 #define _APS_NEXT_CONTROL_VALUE         1007
 #define _APS_NEXT_SYMED_VALUE           102
 #endif
